--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div id="lasaiInfo">
                     <div id="lasaiT">Spazio, tutti al sicuro <br> nel Bunker di Ridolfi</div>
                     <div id="lasaiDesc"><i>A distanza di soli due giorni <br> dall'annuncio del cambio dell'inno d'Italia...</i></div>
-                    <div class="button" href="">Vai alla notizia</div>
+                    <div class="button" href="pagine/news/PresNews/razzo.html">Vai alla notizia</div>
 
                 </div>
                 <div id="lasaiImg">
