--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <div id="lasaiInfo">
                     <div id="lasaiT">Spazio, tutti al sicuro <br> nel Bunker di Ridolfi</div>
                     <div id="lasaiDesc"><i>A distanza di soli due giorni <br> dall'annuncio del cambio dell'inno d'Italia...</i></div>
-                    <div class="button" href="pagine/news/PresNews/razzo.html">Vai alla notizia</div>
+                    <a href="pagine/news/PresNews/razzo.html">
+                        <div class="button">Vai alla notizia</div>
+                    </a>
 
                 </div>
                 <div id="lasaiImg">
@@ -61,8 +63,9 @@
 
                         piu... Patriottico</div>
                     
-                    <div class="button" href="">Vai alla notizia</div>
-
+                    <a href="pagine/news/PresNews/inno.html">
+                        <div class="button">Vai alla notizia</div>
+                    </a>
                 </div>
                 <div id="soggettoImg">
                     <img src="img/NewsPres/pres.jpeg" alt="copertinaSoggetto">
