--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <div id="soggettoT">Italia, Ridolfi cambia l'Inno Nazionale in qualcosa di
 
                         piu... Patriottico</div>
-                    
-                    <div class="button" href="">Vai alla notizia</div>
-
+                    <a href="pagine/news/PresNews/inno.html">
+                        <div class="button">Vai alla notizia</div>
+                    </a>
                 </div>
                 <div id="soggettoImg">
                     <img src="img/NewsPres/pres.jpeg" alt="copertinaSoggetto">
