--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
     <!--Titolo-->
     <div id="intestazione">
-        <div id="welcome" style="font-family: Forte;">Welcome to</div>
-        <div id="webeeeT"style="font-family: Shelman">Webeee</div>
+        <img src="img/Generale/Welcome to.2.png" id="welcome">
+        <img src="img/Generale/Webeee.3.png" id="webeeeT">
     </div>
     <!--Pagina-->
     <div id="pagina">
