--- a/pagine/news.html
+++ b/pagine/news.html
@@ -32,7 +32,7 @@
     </div>
     <!--Titolo-->
     <div id="intestazione">
-        <div id="webeeeT"style="font-family: Shelman">News</div>
+        <img src="../img/Generale/News.png" id="webeeeT">
     </div>
     <!--Pagina-->
     <div id="paginaMods">
