Baiano Tour News

--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
             <div id="lasaiTitolino">La sai l'ultima?</div>
             <div id="corpo">
                 <div id="lasaiInfo">
-                    <div id="lasaiT">Spazio, tutti al sicuro <br> nel Bunker di Ridolfi</div>
-                    <div id="lasaiDesc"><i>A distanza di soli due giorni <br> dall'annuncio del cambio dell'inno d'Italia...</i></div>
-                    <a href="pagine/news/PresNews/razzo.html">
+                    <div id="lasaiT">Ridolfi. Che il tour della Metropoli abbia inizio!</div>
+                    <div id="lasaiDesc"><i>Il giorno che tutti stavano aspettando è arrivato, 
+                        Alessandro Flavio Ridolfi...</i></div>
+                    <a href="pagine/news/PresNews/tour.html">
                         <div class="button">Vai alla notizia</div>
                     </a>
 
                 </div>
                 <div id="lasaiImg">
-                    <img src="img/NewsPres/razzo.jpeg" alt="copertina">
+                    <img src="img/NewsPres/tour.jpeg" alt="copertina">
                 </div>
             </div>
         </div>
