--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="news.css">
+    <link rel="stylesheet" href="gallery.css">
     <script src=script.js></script>
-    <title>News - Webeee</title>
+    <title>Gallery - Webeee</title>
     <link rel="shortcut icon" href="../img/Generale/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -51,40 +51,14 @@
                     </a>
                 </div>
                 <div class="mods">
-                    <div class="modsImg"><img src="../img/NewsPres/Pres4.png"></div>
-                    <div class="modsT">Il Pres </div>
-                    <div class="modsDesc">Il Capo Supremo <b>Alessandro Ridolfi,</b> proprietario del Bunker di Baiano, il più all'avanguardia del Pianeta</div>
-                    <a href="news/pres.html">    
-                        <div class="button">Vai alla categoria</div>
-                    </a>
-                </div>
-                <div class="mods">
-                    <div class="modsImg"><img src="../img/music.jpg"></div>
-                    <div class="modsT">Musica</div>
-                    <div class="modsDesc">"Tolome' zitto e girate" <br>Purtroppo per voi non funziona <br>con questo bizzarro compositore. </div>
-                        <div class="button">Vai alla categoria</div>
-                    </a>
-                </div>
-    <div id="paginaMods2">
-        <div id="modsSezione">
-            <div id="tutteMods">
-                <div class="mods">
-                    <div class="modsImg"><img src="../img/scienze.jpg"></div>
-                    <div class="modsT">Ultime scoperte</div>
-                    <div class="modsDesc">Come? Un pianeta a forma di <b>dinosauro?</b> Ce lo spiega Riccardo Tomassoni </div>
-                        <div class="button">Vai alla categoria</div>
-                    </a>
-                </div>
-                <div class="mods">
                     <div class="modsImg"><img src="../img/comingsoon.png"></div>
                     <div class="modsT">Altro</div>
                     <div class="modsDesc">Coming Soon! </div>
-                       
-                    </a>
-                </div>
+                </a>
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
