--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
         <img src="img/Generale/Navbar.png" id=navbar>
         <img src="img/Generale/logo.png" alt="Ambeee" id="logo">
         <div id="menu">
-            <div class="menuTab">Home</div>
+            <a href="../index.html">
+                <div class="menuTab">Home</div>
+            </a>
             <div class="menuTab">Chi sono</div>
-            <div class="menuTab">Gallery</div>
-            <a href="pagine/news.html">
-            <div class="menuTab">News</div></a>
+            <a href="gallery.html">
+                <div class="menuTab">Gallery</div>
+            </a>
+            <a href="news.html">
+                <div class="menuTab">News</div>
+            </a>
         </div>
     </div>
     <!--Titolo-->
@@ -84,6 +89,21 @@
                     <div id="culturaDesc"><i>compare una canzone tra le chat degli studenti, <br> è subito un successone per Lorenzo Tolomei</i></div>
                     <a href="pagine/news/aiutatemi.html">
                         <div class="button" href="">Vai alla notizia</div>
+                    </a>
+                </div>
+                
+            </div>
+        </div>
+
+        <!--Gallery-->
+        <div id="gallerysez">
+            <div id="galleryTitolino">Le Nostre Foto</div>
+            <div id="corpo4">
+                <div id="galleryInfo">
+                    <div id="galleryT"><i>Dai uno sguardo alla nostra Gallery!</div>
+                    <div id="galleryDesc"><i>Grandi foto per grandi occasioni...</i></div>
+                    <a href="pagine/gallery.html">
+                        <div class="button" href="">Vai alla Gallery</div>
                     </a>
                 </div>
                 
