Gallery page + tour

--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -36,18 +36,19 @@
     </div>
     <!--Titolo-->
     <div id="intestazione">
-        <img src="../img/Generale/News.png" id="webeeeT">
+        <img src="../img/Gallery/Gallery.png" id="webeeeT">
     </div>
     <!--Pagina-->
     <div id="paginaMods">
         <div id="modsSezione">
-            <div class="titleSezione">Scegli La Categoria Che Fa Per Te!</div>
+            <div class="titleSezione">Scegli l'evento da ricordare!</div>
             <div id="tutteMods">
                 <div class="mods">
-                    <div class="modsImg"><img src="../img/NewsMoretti/monna.jpg"></div>
-                    <div class="modsT">Il Moretti</div>
-                    <div class="modsDesc">Sei un appassionato di storia dell'arte? Questo fa al caso tuo! Scopri gli aneddoti dell'artista più emergente d'Italia!</div>
-                        <div class="button">Vai alla categoria</div>
+                    <div class="modsImg"><img src="../img/Gallery/"></div>
+                    <div class="modsT">Tour Di Baiano</div>
+                    <div class="modsDesc">Sabato 15 maggio il Presidente ridolfi ha aperto le porte della sua grande città.</div>
+                    <a href="gallery/baianotour.html">    
+                        <div class="button">Vai all'evento</div>
                     </a>
                 </div>
                 <div class="mods">
