--- a/index.html
+++ b/index.html
@@ -54,55 +54,57 @@
     </div>
     <!--Pagina-->
     <div id="pagina">
-        <!--La sai l'ultima?-->
-        <div id="lasaisez">
-            <div id="lasaiTitolino">La sai l'ultima?</div>
-            <div id="corpo">
-                <div id="lasaiInfo">
-                    <div id="lasaiT">Ridolfi. Che il tour della Metropoli abbia inizio!</div>
-                    <div id="lasaiDesc"><i>Il giorno che tutti stavano aspettando è arrivato, 
-                        Alessandro Flavio Ridolfi...</i></div>
-                    <a href="pagine/news/PresNews/tour.html">
-                        <div class="button">Vai alla notizia</div>
-                    </a>
+        <div id="sezioneNews">
+            <!--La sai l'ultima?-->
+            <div id="lasaisez">
+                <div id="lasaiTitolino">La sai l'ultima?</div>
+                <div id="corpo">
+                    <div id="lasaiInfo">
+                        <div id="lasaiT">Ridolfi. Che il tour della Metropoli abbia inizio!</div>
+                        <div id="lasaiDesc"><i>Il giorno che tutti stavano aspettando è arrivato, 
+                            Alessandro Flavio Ridolfi...</i></div>
+                        <a href="pagine/news/PresNews/tour.html">
+                            <div class="button">Vai alla notizia</div>
+                        </a>
 
-                </div>
-                <div id="lasaiImg">
-                    <img src="img/NewsPres/tour.jpeg" alt="copertina">
+                    </div>
+                    <div id="lasaiImg">
+                        <img src="img/NewsPres/tour.jpeg" alt="copertina">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!--Che Soggetto!-->
-        <div id="soggettosez">
-            <div id="soggettoTitolino">Che Soggetto!</div>
-            <div id="corpo2">
-                <div id="soggettoInfo">
-                    <div id="soggettoT">Italia, Ridolfi cambia l'Inno Nazionale in qualcosa di
+            <!--Che Soggetto!-->
+            <div id="soggettosez">
+                <div id="soggettoTitolino">Che Soggetto!</div>
+                <div id="corpo2">
+                    <div id="soggettoInfo">
+                        <div id="soggettoT">Italia, Ridolfi cambia l'Inno Nazionale in qualcosa di
 
-                        piu... Patriottico</div>
-                    <a href="pagine/news/PresNews/inno.html">
-                        <div class="button">Vai alla notizia</div>
-                    </a>
-                </div>
-                <div id="soggettoImg">
-                    <img src="img/NewsPres/pres.jpeg" alt="copertinaSoggetto">
+                            piu... Patriottico</div>
+                        <a href="pagine/news/PresNews/inno.html">
+                            <div class="button">Vai alla notizia</div>
+                        </a>
+                    </div>
+                    <div id="soggettoImg">
+                        <img src="img/NewsPres/pres.jpeg" alt="copertinaSoggetto">
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!--Tutto fa cultura-->
-        <div id="culturasez">
-            <div id="culturaTitolino">Tutto fa Cultura</div>
-            <div id="corpo3">
-                <div id="culturaInfo">
-                    <div id="culturaT"><i>"Aiutatemi a Ragionare"</i> è il nuovo singolo di tendenza</div>
-                    <div id="culturaDesc"><i>compare una canzone tra le chat degli studenti, <br> è subito un successone per Lorenzo Tolomei</i></div>
-                    <a href="pagine/news/aiutatemi.html">
-                        <div class="button" href="">Vai alla notizia</div>
-                    </a>
+            <!--Tutto fa cultura-->
+            <div id="culturasez">
+                <div id="culturaTitolino">Tutto fa Cultura</div>
+                <div id="corpo3">
+                    <div id="culturaInfo">
+                        <div id="culturaT"><i>"Aiutatemi a Ragionare"</i> è il nuovo singolo di tendenza</div>
+                        <div id="culturaDesc"><i>compare una canzone tra le chat degli studenti, <br> è subito un successone per Lorenzo Tolomei</i></div>
+                        <a href="pagine/news/aiutatemi.html">
+                            <div class="button" href="">Vai alla notizia</div>
+                        </a>
+                    </div>
+                    
                 </div>
-                
             </div>
         </div>
 
