--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <img src="img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobile()">
         </div>
     </div>
+    <!--NavbarMobile-->
     <div id="mobileNav">
         <div id="mobileMenu">
             <a href="index.html"><div class="mobileTab">Home</div></a>
