--- a/pagine/news.html
+++ b/pagine/news.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="news.css">
-    <script src=script.js></script>
+    <script src=../script.js></script>
     <title>News - Webeee</title>
     <link rel="shortcut icon" href="../img/Generale/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -32,6 +32,16 @@
             <a href="news.html">
                 <div class="menuTab">News</div>
             </a>
+            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobile1()">
+        </div>
+    </div>
+    <!--NavbarMobile-->
+    <div id="mobileNav">
+        <div id="mobileMenu">
+            <a href="../index.html"><div class="mobileTab">Home</div></a>
+            <div class="mobileTab">Chi sono</div>
+            <a href="gallery.html"><div class="mobileTab">Gallery</div></a>
+            <a href="news.html"><div class="mobileTab">News</div></a>
         </div>
     </div>
     <!--Titolo-->
@@ -65,6 +75,9 @@
                         <div class="button">Vai alla categoria</div>
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
     <div id="paginaMods2">
         <div id="modsSezione">
             <div id="tutteMods">
@@ -85,6 +98,40 @@
             </div>
         </div>
     </div>
+
+    <!--PaginaMobile-->
+    <div id="paginaModsM">
+        <div id="modsSezione">
+            <div id="tutteMods">
+                <div class="mobileMods">
+                    <a href="">
+                        <div class="modsImgM"><img src="../img/NewsMoretti/monna.jpg"></div>
+                        <div class="modsT">Il Moretti</div>
+                    </a>
+                </div>
+                <div class="mobileMods">
+                    <a href="news/pres.html">
+                        <div class="modsImgM"><img src="../img/NewsPres/Pres4.png"></div>
+                        <div class="modsT">Il Pres</div>
+                    </a>
+                </div>
+            </div>
+            <div id="tutteMods">
+                <div class="mobileMods">
+                    <div class="modsImgM"><img src="../img/music.jpg"></div>
+                    <div class="modsT">Musica</div>
+                </div>
+                <div class="mobileMods">
+                    <div class="modsImgM"><img src="../img/scienze.jpg"></div>
+                    <div class="modsT">Ultime Scoperte</div>
+                </div>
+            </div>
+            <div id="tutteMods">
+                <div class="mobileMods">
+                    <div class="modsImgM"><img src="../img/comingsoon.png"></div>
+                    <div class="modsT"><i>coming soon!</i></div>
+                </div>
+            </div>
 </body>
 
 </html>
