--- a/pagine/news.html
+++ b/pagine/news.html
@@ -105,13 +105,13 @@
             <div id="tutteMods">
                 <div class="mobileMods">
                     <a href="">
-                        <div class="modsImgM"><img src="../img/NewsMoretti/monna.jpg"></div>
+                        <div class="modsImgM"><img src="../img/NewsMoretti/monna.jpg" id="monna"></div>
                         <div class="modsT">Il Moretti</div>
                     </a>
                 </div>
                 <div class="mobileMods">
                     <a href="news/pres.html">
-                        <div class="modsImgM"><img src="../img/NewsPres/Pres4.png"></div>
+                        <div class="modsImgM"><img src="../img/NewsPres/Pres3.png" id="newspres"></div>
                         <div class="modsT">Il Pres</div>
                     </a>
                 </div>
