--- a/pagine/news.html
+++ b/pagine/news.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="mobileMods">
                     <a href="news/pres.html">
-                        <div class="modsImgM"><img src="../img/NewsPres/Pres3.png" id="newspres"></div>
+                        <div class="modsImgM"><img src="../img/NewsPres/pres3.png" id="newspres"></div>
                         <div class="modsT">Il Pres</div>
                     </a>
                 </div>
