--- a/pagine/news.html
+++ b/pagine/news.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="../img/SHELMAN.tff" rel="stylesheet">
+    <meta name="viewport" content="width=device-width" >
 </head>
 
 <body>
