--- a/pagine/news.html
+++ b/pagine/news.html
@@ -33,7 +33,7 @@
             <a href="news.html">
                 <div class="menuTab">News</div>
             </a>
-            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobile1()">
+            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobileNews()">
         </div>
     </div>
     <!--NavbarMobile-->
