--- a/pagine/news.html
+++ b/pagine/news.html
@@ -33,7 +33,7 @@
             <a href="news.html">
                 <div class="menuTab">News</div>
             </a>
-            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobileNews()">
+            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobileNG()">
         </div>
     </div>
     <!--NavbarMobile-->
@@ -116,8 +116,6 @@
                         <div class="modsT">Il Pres</div>
                     </a>
                 </div>
-            </div>
-            <div id="tutteMods">
                 <div class="mobileMods">
                     <div class="modsImgM"><img src="../img/music.jpg"></div>
                     <div class="modsT">Musica</div>
@@ -126,13 +124,11 @@
                     <div class="modsImgM"><img src="../img/scienze.jpg"></div>
                     <div class="modsT">Ultime Scoperte</div>
                 </div>
-            </div>
-            <div id="tutteMods">
                 <div class="mobileMods">
                     <div class="modsImgM"><img src="../img/comingsoon.png"></div>
                     <div class="modsT"><i>coming soon!</i></div>
                 </div>
             </div>
-</body>
-
+        </div>
+    </div>
 </html>
