--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="gallery.css">
-    <script src=script.js></script>
+    <script src=../script.js></script>
     <title>Gallery - Webeee</title>
     <link rel="shortcut icon" href="../img/Generale/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="../img/SHELMAN.tff" rel="stylesheet">
+    <meta name="viewport" content="width=device-width" >
 </head>
 
 <body>
@@ -32,6 +33,16 @@
             <a href="news.html">
                 <div class="menuTab">News</div>
             </a>
+            <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobileNG()">
+        </div>
+    </div>
+    <!--NavbarMobile-->
+    <div id="mobileNav">
+        <div id="mobileMenu">
+            <a href="../index.html"><div class="mobileTab">Home</div></a>
+            <div class="mobileTab">Chi sono</div>
+            <a href="gallery.html"><div class="mobileTab">Gallery</div></a>
+            <a href="news.html"><div class="mobileTab">News</div></a>
         </div>
     </div>
     <!--Titolo-->
