--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <div id="NavBar">
         <img src="../img/Generale/Navbar.png" id=navbar>
-        <img src="../img/Generale/logo.png" alt="Ambeee" id="logo">
+        <img src="../img/Generale/logo.png" alt="Ambeee" id="logo" onclick="TopSecret()">
         <div id="menu">
             <a href="../index.html">
                 <div class="menuTab">Home</div>
@@ -59,6 +59,14 @@
                     <div class="modsT">Tour Di Baiano</div>
                     <div class="modsDesc">Sabato 15 maggio il Presidente ridolfi ha aperto le porte della sua grande città.</div>
                     <a href="gallery/baianotour.html">    
+                        <div class="button">Vai all'evento</div>
+                    </a>
+                </div>
+                <div class="mods" id="Stickers">
+                    <div class="modsImg"><img src="../img/Gallery/"></div>
+                    <div class="modsT">TOP SECRET</div>
+                    <div class="modsDesc">Stickers!</div>
+                    <a href="gallery/stickers.html">    
                         <div class="button">Vai all'evento</div>
                     </a>
                 </div>
