--- a/pagine/news.html
+++ b/pagine/news.html
@@ -86,6 +86,7 @@
                     <div class="modsImg"><img src="../img/scienze.jpg"></div>
                     <div class="modsT">Ultime scoperte</div>
                     <div class="modsDesc">Come? Un pianeta a forma di <b>dinosauro?</b> Ce lo spiega Riccardo Tomassoni </div>
+                    <a href="news/scienza.html">
                         <div class="button">Vai alla categoria</div>
                     </a>
                 </div>
