Responsive Scienza + foto

--- a/pagine/news.html
+++ b/pagine/news.html
@@ -122,8 +122,10 @@
                     <div class="modsT">Musica</div>
                 </div>
                 <div class="mobileMods">
-                    <div class="modsImgM"><img src="../img/scienze.jpg"></div>
-                    <div class="modsT">Ultime Scoperte</div>
+                    <a href="news/scienza.html">
+                        <div class="modsImgM"><img src="../img/scienze.jpg"></div>
+                        <div class="modsT">Ultime Scoperte</div>
+                    </a>
                 </div>
                 <div class="mobileMods">
                     <div class="modsImgM"><img src="../img/comingsoon.png"></div>
