--- a/pagine/news.html
+++ b/pagine/news.html
@@ -73,6 +73,7 @@
                     <div class="modsImg"><img src="../img/music.jpg"></div>
                     <div class="modsT">Musica</div>
                     <div class="modsDesc">"Tolome' zitto e girate" <br>Purtroppo per voi non funziona <br>con questo bizzarro compositore. </div>
+                    <a href="news/Musica.html">    
                         <div class="button">Vai alla categoria</div>
                     </a>
                 </div>
@@ -118,8 +119,10 @@
                     </a>
                 </div>
                 <div class="mobileMods">
-                    <div class="modsImgM"><img src="../img/music.jpg"></div>
-                    <div class="modsT">Musica</div>
+                    <a href="news/Musica.html">
+                        <div class="modsImgM"><img src="../img/music.jpg"></div>
+                        <div class="modsT">Musica</div>
+                    </a>
                 </div>
                 <div class="mobileMods">
                     <a href="news/scienza.html">
