--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div id="culturaInfo">
                         <div id="culturaT"><i>"Aiutatemi a Ragionare"</i> è il nuovo singolo di tendenza</div>
                         <div id="culturaDesc"><i>compare una canzone tra le chat degli studenti, <br> è subito un successone per Lorenzo Tolomei</i></div>
-                        <a href="pagine/news/aiutatemi.html">
+                        <a href="pagine/news/Musica/aiutatemi.html">
                             <div class="button" href="">Vai alla notizia</div>
                         </a>
                     </div>
