--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                 <div id="lasaiTitolino">La sai l'ultima?</div>
                 <div id="corpo">
                     <div id="lasaiInfo">
-                        <div id="lasaiT">Ridolfi. Che il tour della Metropoli abbia inizio!</div>
-                        <div id="lasaiDesc"><i>Il giorno che tutti stavano aspettando è arrivato, 
-                            Alessandro Flavio Ridolfi...</i></div>
+                        <div id="lasaiT">Dramma Ridolfi. Nasconde le chiavi
+                            sotto lo zerbino di Pensa, ma non
+                            si ricorda quale</div>
+                        <div id="lasaiDesc"><i></i></div>
                         <a href="pagine/news/PresNews/tour.html">
                             <div class="button">Vai alla notizia</div>
                         </a>
@@ -80,9 +81,9 @@
                 <div id="soggettoTitolino">Che Soggetto!</div>
                 <div id="corpo2">
                     <div id="soggettoInfo">
-                        <div id="soggettoT">Italia, Ridolfi cambia l'Inno Nazionale in qualcosa di
-
-                            piu... Patriottico</div>
+                        <div id="soggettoT">Ridolfi. Che il tour della Metropoli abbia inizio!</div>
+                        <div id="lasaiDesc"><i>Il giorno che tutti stavano aspettando è arrivato, 
+                            Alessandro Flavio Ridolfi...</i></div>
                         <a href="pagine/news/PresNews/inno.html">
                             <div class="button">Vai alla notizia</div>
                         </a>
