--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="gallery.css">
-    <script src=../script.js></script>
+    <script src="../script.js"></script>
     <title>Gallery - Webeee</title>
     <link rel="shortcut icon" href="../img/Generale/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,7 +21,7 @@
     <!--Navbar-->
     <div id="NavBar">
         <img src="../img/Generale/Navbar.png" id=navbar>
-        <img src="../img/Generale/logo.png" alt="Ambeee" id="logo" onclick="TopSecret()">
+        <a href = "gallery/TopSecret.html"><img src="../img/Generale/logo.png" alt="Ambeee" id="logo" onclick="TopSecret()"></a>
         <div id="menu">
             <a href="../index.html">
                 <div class="menuTab">Home</div>
@@ -35,6 +35,10 @@
             </a>
             <img src="../img/Generale/IconaMenu1.png" id="menuIcon" onclick="MenuMobileNG()">
         </div>
+    </div>
+    <!--TOP SECRET-->
+    <div id="mobileNav" alt="paginaSegreta">
+
     </div>
     <!--NavbarMobile-->
     <div id="mobileNav">
@@ -55,7 +59,7 @@
             <div class="titleSezione">Scegli l'evento da ricordare!</div>
             <div id="tutteMods">
                 <div class="mods">
-                    <div class="modsImg"><img src="../img/Gallery/"></div>
+                    <div class="modsImg"><img src="../img/NewsPres/tour.jpeg"></div>
                     <div class="modsT">Tour Di Baiano</div>
                     <div class="modsDesc">Sabato 15 maggio il Presidente ridolfi ha aperto le porte della sua grande città.</div>
                     <a href="gallery/baianotour.html">    
