--- a/pagine/news.html
+++ b/pagine/news.html
@@ -94,8 +94,8 @@
                 <div class="mods">
                     <div class="modsImg"><img src="../img/comingsoon.png"></div>
                     <div class="modsT">Altro</div>
-                    <div class="modsDesc">Coming Soon! </div>
-                       
+                    <a href="news/none.html">
+                        <div class="modsDesc">Coming Soon! </div>   
                     </a>
                 </div>
             </div>
