--- a/pagine/gallery.html
+++ b/pagine/gallery.html
@@ -58,6 +58,15 @@
         <div id="modsSezione">
             <div class="titleSezione">Scegli l'evento da ricordare!</div>
             <div id="tutteMods">
+                <!--Barcellona-->
+                <div class="mods">
+                    <div class="modsImg"><img src="../img/NewsPres/tour.jpeg"></div>
+                    <div class="modsT">Viaggio a Barcellona</div>
+                    <a href="gallery/barcellona.html">    
+                        <div class="button">Vai all'evento</div>
+                    </a>
+                </div>
+                <!--Tour Baiano-->
                 <div class="mods">
                     <div class="modsImg"><img src="../img/NewsPres/tour.jpeg"></div>
                     <div class="modsT">Tour Di Baiano</div>
@@ -66,6 +75,7 @@
                         <div class="button">Vai all'evento</div>
                     </a>
                 </div>
+                <!--Top Secret-->
                 <div class="mods" id="Stickers">
                     <div class="modsImg"><img src="../img/Gallery/"></div>
                     <div class="modsT">TOP SECRET</div>
